# mpc_local_planner_mb

./: CMakeLists.txt  README.md  mpclp_plugin.xml  package.xml
cfg/: mpc_params.yaml
document/ipopt_install/: ipopt_arm_install_tutorial.md  ipopt_x86_install_tutorial.md
include/mpc_local_planner_mb/: MPC.h  mpc_local_planner_mb.h
launch/: mpc_movebase_start.launch
rviz/: rviz_navigation_mpc.rviz
src/: MPC.cpp  mpc_local_planner_mb.cpp
